--- a/public/tailwind.css
+++ b/public/tailwind.css
@@ -66,8 +66,9 @@
     @apply visible opacity-100 scale-100;
   }
   
-  h1 {
-    font:Europa-Bold;
-    font-weight: 800 !important;
+  html {
+    font-family: "Europa", Europa-Bold; /* 1 */
+    font-weight: 800;
+    line-height: 1.5; /* 2 */
   }
 }
